syntax = "proto3";
package api;

import "empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "api/protobuf";

message MeasurementEvent {
  string id = 1;
  string peripheralId = 2;
  string deploymentId = 3;
  int32 value = 4;
  google.protobuf.Timestamp time_stamp = 5;
}

message NewMeasurementEvent {
  string peripheralId = 1;
  string deploymentId = 2;
  int32 value = 3;
  google.protobuf.Timestamp time_stamp = 4;
}

message MeasurementEventFilterRequest {
  string peripheralId = 1;
  string deploymentId = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
}

service PeripheralMeasurementEventService {
  rpc SendEvent(NewMeasurementEvent) returns (Empty);
  rpc FilterEvents(MeasurementEventFilterRequest) returns (stream MeasurementEvent);
}
